Fix authentication, Stripe webhooks, and complete NumNinja platform
- Fixed authentication persistence issue by consolidating Supabase clients
- Resolved Stripe webhook errors (user table references, missing endpoints)
- Made email service optional (Resend API)
- Fixed checkout success page runtime errors
- Cleaned up all debug imports
- Created missing API endpoints
- All 5 development phases complete and working

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@react-email/components": "^0.5.1",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
@@ -20,6 +21,8 @@
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-email": "^4.2.8",
+    "resend": "^6.0.2",
     "sonner": "^2.0.7",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
